--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
+sudo: enabled
 node_js:
   - 7
 services:
   - mysql
 before_install:
-  - mysql -e 'CREATE DATABASE myapp_test;'
+  - mysql -e '\./db/repo.txt; \./db/repo_queue.txt'
 install:
   - npm install
 script:
