--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - mysql
 before_install:
   - mysql -e 'CREATE DATABASE repo;'
-  - mysql -u root repo < db/repo.txt;'
+  - mysql '-u root repo < db/repo.txt;'
 install:
   - npm install
 script:
